# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  pyproject.toml
localstack_pre_commit/: check_pinned_deps.py  upgrade_deps.py  validate_openapi_spec.py
